# MPAS-ESM

./: .gitmodules  build.sh
envs/: derecho_env_gnu.sh  derecho_env_intel.sh
src/CMEPS-interface/: CMakeLists.txt
src/MOM6_interface/: CMakeLists.txt  mom6_files.cmake
